--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 				<meta charset="UTF-8">
 				<title>cetmar No.9</title>
 		
-				<link rel="icon" href="img/cetmar.png">
-				<link rel="stylesheet" type="text/css" href="css/style.css">
+				<link rel="icon" href="cetmar.png">
+				<link rel="stylesheet" type="text/css" href="style.css">
 			
 			
 				
